--- a/style.css
+++ b/style.css
@@ -79,3 +79,18 @@ li {
   padding: 2rem;
   background-color: #f1f1f1;
 }
+
+blockquote {
+  font-style: italic;
+  background: #f1f1f1;
+  padding: 1rem;
+  border-left: 4px solid #7b61ff;
+  margin: 1rem 0;
+}
+
+blockquote footer {
+  font-size: 0.9rem;
+  color: #555;
+  margin-top: 0.5rem;
+}
+
