--- a/style.css
+++ b/style.css
@@ -184,23 +184,16 @@ blockquote footer {
   }
 }
 
-.logo {
-  display: block;
-  margin: 0 auto; /* Center horizontally */
-  max-width: 200px;
-  width: 60%;
-  height: auto;
-  padding-top: 10px;
-  transition: all 0.3s ease;
+.nav-logo {
+  text-align: center;
+  flex: 1;
 }
 
-/* Make it bigger on larger screens */
-@media screen and (min-width: 768px) {
-  .logo {
-    max-width: 250px;
-    width: 40%;
-    padding-top: 20px;
-  }
+.logo {
+  max-width: 150px;
+  height: auto;
+  display: block;
+  margin: 0 auto;
 }
 
 
